--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,84 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.input-container {
+  position: relative;
+  width: 100%; /* Sesuaikan dengan kebutuhan */
+  margin-bottom: 15px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.input-container input[type="text"] {
+  width: 100%;
+  border-radius: 5px;
+  outline: none;
+  /* background-color: grey; Ubah warna latar belakang sesuai kebutuhan */
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.input-container button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 2px 10px 2px 10px;
+  border: 2px solid #1de5e2;
+  color: white;
+  border-radius: 20px;
+  cursor: pointer;
+  outline: none;
+}
+#btn-generate:hover {
+  background: linear-gradient(170deg, #1de5e2, #b588f7);
+  border: none;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.gradient-text {
+  background: linear-gradient(170deg, #1de5e2, #b588f7);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-fill-color: transparent;
+}
+
+.gradient-text:hover {
+  background: linear-gradient(170deg, #1de5e2, #b588f7);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: white;
+  text-fill-color: white;
+}
+
+/* Modal Container */
+.modal {
+  display: none; /* Modal di awal disembunyikan */
+  position: fixed; /* Tetap di tengah bahkan saat scroll */
+  z-index: 1; /* Di atas semua elemen lain */
+  left: 0;
+  top: 0;
+  width: 100%; /* Lebar penuh */
+  height: 100%; /* Tinggi penuh */
+  overflow: auto; /* Mungkin scrolling jika konten terlalu banyak */
+  background-color: rgba(0, 0, 0, 0.4); /* Latar belakang semi-transparan */
+}
+
+/* Konten Modal */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* Posisi tengah atas */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Lebar konten modal */
+}
+
+/* Tombol Close */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
